// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlidePanelManger Snapshots should render with optional props 1`] = `
<SlidePanelManager
  disclosureAccessory={
    <div>
      Test Accessory
    </div>
  }
  panelBehavior="overlay"
  withDisclosureContainer={[Function]}
>
  <TestChild />
</SlidePanelManager>
`;

exports[`SlidePanelManger Snapshots should render with required props 1`] = `
<SlidePanelManager
  panelBehavior="overlay"
  withDisclosureContainer={[Function]}
>
  <TestChild />
</SlidePanelManager>
`;
